# cocos2dx-lite-freetype

./: .gitignore  CMakeLists.txt  main.cpp  tests.cpp
resources/: config.h.in
src/: FontAtlas.cpp  FontAtlas.h  FontFreetype.cpp  FontFreetype.h  Label.cpp  Label.h  defs.cpp  defs.h
tests/: test_fontatlas.cpp
utils/: Utils.cpp  Utils.h  ccUTF8.cpp  ccUTF8.h
